# job-rank

./: .clineignore  .clinerules  .gitignore  config.yaml  justfile  main.py  pyproject.toml  rank_jobs.py
.devcontainer/: Dockerfile  devcontainer.json
data/cv/: sample_cv.md
data/jd/: jd_1_backend_django.md  jd_2_data_analyst.md  jd_3_frontend_react.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
prompts/: explanation_prompt.txt  system_message.txt
src/: rank_jobs.py
src/job_rank/: rank_jobs.py
tests/: test_cache.py  test_config.py  test_config_valid.yaml  test_pipeline.py
