[project]
name = "job-rank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.23",
    "langchain-openai>=0.3.14",
    "markdown>=3.8",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "pyyaml>=6.0.2", # Added PyYAML explicitly as it's used now
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in src

[dependency-groups]
dev = [
    "data-science-types>=0.2.23",
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "types-pyyaml>=6.0.12.20250402",
]
